Rename package 'limitsreduction' to 'limitreduction'
Signed-off-by: Olivier Perrin <olivier.perrin@rte-france.com>